Changes in TeleGNOME 0.3.5
==========================

Changes in TeleGNOME 0.3.4
==========================

 * Stop using deprecated Gtk.show_uri.  Now requires GTK+ >= 3.22.
 * Use modern AppStream installation directory.

UI translations:
  da (Ask Hjorth Larsen), ro (Daniel Șerbănescu)

Doc translations:
  cs (Marek Cernocky), de (Mario Blättermann), pl (Piotr Drąg), sv (Anders
  Jonsson)

Changes in TeleGNOME 0.3.3
==========================

 * Fix build with Vala 0.36 (Jeremy Bicha).

Translations:

  da (Ask Hjorth Larsen), es (Yolanda Álvarez Pérez), fur (Fabio Tomat), id
  (Andika Triwidada, Kukuh Syafaat), pl (Piotr Drąg), sr (Мирослав Николић),
  sr@latin (Мирослав Николић)

Changes in TeleGNOME 0.3.2
==========================

 * Fix incorrect description of paging-enabled key.
 * Migrate from gnome-doc-utils to yelp-tools.
 * Port away from gnome-common.
 * Stop using deprecated ACLOCAL_AMFLAGS.
 * Migrate from intltool to Gettext.

Translations:
  cs (Marek Černocký), de (Mario Blättermann), es (Yolanda Álvarez Pérez),
  hu (Balázs Meskó, Gábor Kelemen), oc (Cédric Valmary), pl (Piotr Drąg),
  pt_BR (Rafael Fontenelle), sr (Мирослав Николић), sr@latin (Мирослав
  Николић), sv (Anders Jonsson, Josef Andersson)

Changes in TeleGNOME 0.3.1
==========================

 * Actually install icons.
 * Add AppStream metadata.

Translations:
  de (Mario Blättermann)

Changes in TeleGNOME 0.3.0
==========================

 * Add Italian teletext channel.
 * Rewrite in Vala.

Translations:
  de (Mario Blättermann), es (Daniel Mustieles), it (Guido Trentalancia)

Changes in TeleGNOME 0.2.1
==========================

 * Don't reset current-channel to the first configured channel on startup.
 * Port from libgnome and libgnomeui to less-deprecated equivalents, mostly
   GResource and GtkUIManager.
 * Port from gtk_timeout_* to GLib equivalents.
 * Port from GtkCList to GtkTreeView and friends.
 * Port to new (as of GTK+ 2.4) GtkToolbar API.